--- a/BlackmothMod.csproj
+++ b/BlackmothMod.csproj
@@ -41,8 +41,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Debug\EnemyRandomizer.dll</HintPath>
     </Reference>
-    <Reference Include="Hooks">
-      <HintPath>..\..\..\..\QoL\Hooks.dll</HintPath>
+    <Reference Include="ModCommon">
+      <HintPath>..\..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Hollow Knight\hollow_knight_data\Managed\Mods\ModCommon.dll</HintPath>
     </Reference>
     <Reference Include="PlayMaker, Version=1.6.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
