--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@ obj/Debug/Blackmoth.csproj.FileListAbsolute.txt
 obj/Debug/Blackmoth.csprojResolveAssemblyReference.cache
 obj/Debug/Blackmoth.pdb
 Properties/AssemblyInfo.cs
+.vs/BlackmothMod/v15/.suo
+.vs/BlackmothMod/v15/Server/sqlite3/db.lock
+.vs/BlackmothMod/v15/Server/sqlite3/storage.ide
+.vs/BlackmothMod/v15/Server/sqlite3/storage.ide-shm
+.vs/BlackmothMod/v15/Server/sqlite3/storage.ide-wal
+obj/Debug/BlackmothMod.csproj.CoreCompileInputs.cache
+obj/Debug/BlackmothMod.csproj.FileListAbsolute.txt
